adding build.sh file, provided by Joseph Kesselman. making the previous build.sh file as deprecated.